--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,7 +21,7 @@
     background-color: var(--card-bg-color);
     border-radius: 20px;
     text-align: center;
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 
     &__qr-code {
         padding: 16px 16px 0;
